<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/user_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <Button
        android:id="@+id/book_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_ride"
        />

    <Button
        android:id="@+id/list_ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_ride" />


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logout" />


    <TextView
        android:id="@+id/BookedRide"
        android:layout_gravity="left"
        android:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/cancelBook"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="Cancel Booked Ride"/>

    <TextView
        android:id="@+id/ListedRide"
        android:layout_gravity="left"
        android:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelList"
        android:layout_gravity="right"
        android:text="Cancel Listed Ride"/>











</LinearLayout>